tests/agl/rejections/parse/pattern_field_colon.agl
enum E
  | A(x: int)
def describe(e: E) -> text =
  case e of
    | A(x: y) => "${y}"
()
